// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// Copied from https://chromium.googlesource.com/infra/infra/+/master/infra_libs/ts_mon/protos/

syntax = "proto3";

package ts_mon.proto;

import "acquisition_network_device.proto";
import "acquisition_task.proto";

message MetricsCollection {
  repeated MetricsData data = 1;

  uint64 start_timestamp_us = 2;
  string collection_point_id = 3;
}

message MetricsField {
  string name = 1;

  FieldType type = 3;
  enum FieldType {
    UNKNOWN = 0;
    STRING = 1;
    INT = 2;
    BOOL = 3;
  };

  string string_value = 4;
  int64 int_value = 5;
  bool bool_value = 6;
}

message PrecomputedDistribution {
  enum SpecType {
    UNKNOWN = 0;
    CANONICAL_POWERS_OF_2 = 1;
    CANONICAL_POWERS_OF_10_P_0_2 = 2;
    CANONICAL_POWERS_OF_10 = 3;
    CUSTOM_PARAMETERIZED = 20;
    CUSTOM_BOUNDED = 21;
  }

  SpecType spec_type = 1;
  double width = 2;
  double growth_factor = 3;
  int32 num_buckets = 4;
  repeated double lower_bounds = 5;
  bool is_cumulative = 6;
  repeated sint64 bucket = 7;
  sint64 underflow = 8;
  sint64 overflow = 9;
  double mean = 10;
  double sum_of_squared_deviation = 11;
}

message MetricsData {
  string name = 1;  // Required.
  string metric_name_prefix = 2;

  ts_mon.proto.NetworkDevice network_device = 11;
  ts_mon.proto.Task task = 12;

  repeated MetricsField fields = 20;

  int64 counter = 30;
  int64 gauge = 32;
  double noncumulative_double_value = 34;
  PrecomputedDistribution distribution = 35;
  string string_value = 36;
  bool boolean_value = 37;
  double cumulative_double_value = 38;

  uint64 start_timestamp_us = 40;

  enum Units {
    UNKNOWN_UNITS = 0;
    SECONDS = 1;
    MILLISECONDS = 2;
    MICROSECONDS = 3;
    NANOSECONDS = 4;

    BITS = 21;
    BYTES = 22;

    /** 1000 bytes (not 1024). */
    KILOBYTES = 31;
    /** 1e6 (1,000,000) bytes. */
    MEGABYTES = 32;
    /** 1e9 (1,000,000,000) bytes. */
    GIGABYTES = 33;

    /** 1024 bytes. */
    KIBIBYTES = 41;
    /** 1024^2 (1,048,576) bytes. */
    MEBIBYTES = 42;
    /** 1024^3 (1,073,741,824) bytes. */
    GIBIBYTES = 43;

    /** Extended Units */
    AMPS = 60;
    MILLIAMPS = 61;
    DEGREES_CELSIUS = 62;
  }
  Units units = 41;

  string description = 43;
}
